# corp-by-os

./: .env.example  .gitignore  CLAUDE.md  CODE_REVIEW_REPORT.md  INTEGRATION_SPEC.md  PROJECT_CONTEXT.md  README.md  pyproject.toml
config/: __init__.py  agents.yaml  content_registry.yaml  settings.py  workflows.yaml
scripts/: _check_proc.ps1  _check_progress.ps1  _final_check.ps1  _scan_pres_delivered.ps1  _scan_presales.ps1  phase1_archive_copy.py  phase2_plan.json  phase2_presales_rename.py  setup_mywork.ps1
src/: __init__.py
src/agents/: __init__.py  file_organizer.py
src/core/llm/: __init__.py  classifier.py  deepseek.py  haiku.py  router.py  sonnet.py  (+1 more)
src/corp_by_os/: __init__.py  audit.py  built_in_actions.py  chat.py  cli.py  config.py  index_builder.py  intent_router.py  llm_router.py  models.py  project_resolver.py  query_engine.py  task_manager.py  template_manager.py  vault_io.py  workflow_engine.py
tasks/: lessons.md  task_step3_chat_router.md  task_step4_templates.md  task_step5_index.md  todo.md
tests/: conftest.py  test_api_keys.py  test_audit.py  test_built_in_actions.py  test_chat.py  test_index_builder.py  test_intent_router.py  test_llm_router.py  test_project_resolver.py  test_query_engine.py  test_task_manager.py  test_template_manager.py  test_vault_io.py  test_workflow_engine.py
tests/test_cleanup/: conftest.py  test_disk.py  test_executor.py  test_proposer.py  test_scanner.py
tests/test_doctor/: test_integrity.py
tests/test_extraction_non_project/: conftest.py  test_contract.py  test_extract_command.py  test_folder_policy.py  test_manifest_emitter.py  test_routing.py  test_scanner.py  test_vault_writer.py
tests/test_freshness/: test_scanner.py
tests/test_ingest/: test_llm_classifier.py  test_router.py
tests/test_ops/: test_database.py  test_registry.py
tests/test_overnight/: test_classifier.py  test_dedup.py  test_extraction_pipeline.py  test_monitor.py  test_preflight.py  test_reshape_flow.py  test_safety.py  test_state.py
tests/test_retrieve/: test_confidence.py  test_engine.py  test_json_output.py  test_prep.py  test_rfp.py
(+41 files in other folders)
