[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "corporate-os"
version = "0.1.0"
description = "Universal Agent-Based Automation for Corporate Knowledge Work"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}

dependencies = [
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
    "httpx>=0.25",
    "click>=8.1",
    "rich>=13.0",
    "anthropic>=0.39",
    "google-generativeai>=0.8",
    "chromadb>=0.4",
    "python-docx>=1.0",
    "pdfplumber>=0.10",
    "python-pptx>=0.6",
    "pandas>=2.0",
    "openpyxl>=3.1",
    "openai-whisper>=20231117",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "black>=23.0",
    "ruff>=0.1",
    "mypy>=1.6",
]

[project.scripts]
corp = "src.cli.main:cli"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "config*"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
